# pyroc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  StandardSettings.cmake
demos/basic/: main.cpp
demos/basic/shaders/: basic.frag  basic.h  basic.vert
include/: pyroc.h
include/backend/vulkan/: api.h  buffer.h  context.h  shader.h  surface.h
include/core/: camera.h
include/math/: func.h  math.h
include/math/types/: mat.h  mat4_float.h  qualifier.h  quat.h  vec.h  vec2.h  vec2_float.h  vec3.h  vec3_float.h  vec4.h  vec4_float.h
include/window/: window.h
src/: main.cpp
src/backend/vulkan/: api.cpp  api.h  buffer.cpp  context.cpp  shader.cpp  surface.cpp
src/core/: camera.cpp
src/util/: allocators.cpp  bitmanip.h  log.cpp  log.h
src/window/: window.cpp
